# livekit-agent

./: .gitignore  ReadMe.md  pyproject.toml
src/agent/: prompts.py  voice_pipeline_agent.py
src/api/: __init__.py  main.py
src/api/v1/: __init__.py  notifications.py  onboarding.py  schemas.py  talent.py  token.py
src/components/: prompts.yaml
src/frontend/: next.config.mjs  package-lock.json  postcss.config.mjs
src/frontend/app/: page.tsx
src/landing/: index.html
src/landing/css/: index.css
src/landing/js/: index.js
